--- a/app/src/main/res/layout/activity_forgot_pasword.xml
+++ b/app/src/main/res/layout/activity_forgot_pasword.xml
@@ -1,75 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".forgotPasword"
-    android:background="@color/lighter_gray">
+    android:background="@color/lighter_gray"
+    tools:context=".forgotPasword">
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Recuperar contraseña"
-        android:textColor="@color/purple"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.104" />
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp">
 
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="356dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="56dp"
-        android:text="Ingresa correo registrado para enviar un correo con los pasos para cambiar tu contraseña."
-        android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7"
-        app:layout_constraintVertical_bias="0.0" />
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Recuperar contraseña"
+            android:textAlignment="center"
+            android:textColor="@color/yolo_purple"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:layout_marginTop="40dp"/>
 
-    <EditText
-        android:id="@+id/log_in_editText_email"
-        android:layout_width="300dp"
-        android:layout_height="60dp"
-        android:background="@drawable/roundstyle"
-        android:backgroundTint="@color/white"
-        android:drawableLeft="@drawable/ic_baseline_email_24"
-        android:ems="10"
-        android:hint="@string/log_in_email_ph"
-        android:inputType="textEmailAddress"
-        android:paddingLeft="15dp"
-        android:textColor="@color/grey_placeholders"
-        android:textSize="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9"
-        app:layout_constraintVertical_bias="0.108" />
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textView7"
+            android:textSize="14sp"
+            android:textColor="@color/grey_letters"
+            android:layout_marginTop="25dp"
+            android:text="Ingresa correo registrado para enviar un correo con los pasos para cambiar tu contraseña."
+            android:textAlignment="center" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/log_in_btn_logIn"
-        android:layout_width="300dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="184dp"
-        android:backgroundTint="@color/blue_botton"
-        android:text="Enviar correo"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        app:cornerRadius="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/log_in_editText_email"
-        app:layout_constraintVertical_bias="0.291" />
+        <EditText
+            android:id="@+id/log_in_editText_email"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:layout_below="@id/textView9"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/roundstyle"
+            android:backgroundTint="@color/white"
+            android:drawableLeft="@drawable/ic_baseline_email_24"
+            android:ems="10"
+            android:hint="@string/log_in_email_ph"
+            android:inputType="textEmailAddress"
+            android:paddingLeft="15dp"
+            android:textColor="@color/grey_placeholders"
+            android:textSize="15dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/log_in_btn_logIn"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:layout_below="@id/log_in_editText_email"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="25dp"
+            android:layout_marginBottom="40dp"
+            android:backgroundTint="@color/blue_botton"
+            android:text="Enviar correo"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            app:cornerRadius="8dp" />
+    </RelativeLayout>
+</RelativeLayout>
