--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,48 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Inicio.Profile">
+    tools:context=".Inicio.Profile"
+    android:background="@color/lighter_gray">
 
-
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="15dp"
+    android:layout_marginRight="15dp"
+    android:layout_centerInParent="true">
     <ImageView
         android:id="@+id/profile_imageView"
-        android:layout_width="228dp"
-        android:layout_height="219dp"
-        android:layout_marginTop="32dp"
-        android:src="@drawable/user_icon"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:scaleType="fitCenter"
+        android:layout_marginTop="40dp"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/user_icon"/>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/profile_button"
-        android:layout_width="56dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="8dp"
-        android:backgroundTint="@color/grey_background"
-        android:drawableLeft="@drawable/ic_baseline_photo_camera_24"
-        android:shadowRadius="50"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/profile_imageView"
-        app:layout_constraintEnd_toEndOf="@+id/profile_imageView"
-        app:layout_constraintHorizontal_bias="0.813"
-        app:layout_constraintStart_toStartOf="@+id/profile_imageView"
-        app:layout_constraintTop_toTopOf="@+id/profile_imageView"
-        app:layout_constraintVertical_bias="0.863" />
+        android:layout_width="55dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="-30dp"
+        android:layout_below="@+id/profile_imageView"
+        android:backgroundTint="@color/yolo_blue_dark"
+        app:cornerRadius="8dp"
+        android:paddingLeft="15dp"
+        android:layout_alignRight="@id/profile_imageView"
+        android:drawableTint="@color/grey_background"
+        android:drawableLeft="@drawable/ic_baseline_photo_camera_24" />
 
     <TextView
         android:id="@+id/profile_txtView_userName"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_below="@+id/profile_button"
+        android:layout_marginTop="40dp"
         android:text="Nombre del usuario"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/profile_imageView"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="@+id/profile_imageView"
-        app:layout_constraintTop_toBottomOf="@+id/profile_button" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:textSize="25sp"
+        android:textColor="@color/yolo_blue"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:layout_marginBottom="40dp"
+        />
+</RelativeLayout>
+</RelativeLayout>
