--- a/app/src/main/res/layout/activity_progress.xml
+++ b/app/src/main/res/layout/activity_progress.xml
@@ -1,22 +1,27 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Agregar imagen previa del perfil en la esquina superior derecha-->
+<?xml version="1.0" encoding="utf-8"?><!-- Agregar imagen previa del perfil en la esquina superior derecha-->
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.bedu.okayapp.Progreso.Progress"
-    android:background="@color/purple_500">
+    android:background="@color/purple_500"
+    tools:context="org.bedu.okayapp.Progreso.Progress">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp">
 
     <TextView
         android:id="@+id/progressTextGreet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="64dp"
-        android:text="Bienvenido, Alejandro"
+        android:text="Bienvenido, Usuario"
         android:textColor="@color/white"
         android:textStyle="bold"
+        android:textSize="17sp"
         app:layout_constraintBottom_toTopOf="@+id/progressPogressBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
@@ -28,10 +33,10 @@
         android:id="@+id/progressTextPercentage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
+        android:text="%"
         android:textColor="@color/white"
-        android:textStyle="bold"
         android:textSize="30dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/progressPogressBar"
         app:layout_constraintEnd_toEndOf="@+id/progressPogressBar"
         app:layout_constraintStart_toStartOf="@+id/progressPogressBar"
@@ -43,8 +48,8 @@
         android:layout_height="wrap_content"
         android:text="Completado"
         android:textColor="@color/white"
-        android:textStyle="bold"
         android:textSize="14dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/progressPogressBar"
         app:layout_constraintEnd_toEndOf="@+id/progressPogressBar"
         app:layout_constraintHorizontal_bias="0.504"
@@ -75,9 +80,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="porcentaje"
-        android:visibility="invisible"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.507"
@@ -92,6 +97,7 @@
         android:text="Mis insignias"
         android:textColor="@color/white"
         android:textStyle="bold"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -159,8 +165,8 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/progressBtnPlay"
-        android:layout_width="316dp"
-        android:layout_height="48dp"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
         android:backgroundTint="#F8C731"
         android:text="SEGUIR JUGANDO"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -170,18 +176,16 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         app:layout_constraintVertical_bias="0.331" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/progressBtnProfile"
-        android:layout_width="85dp"
-        android:layout_height="39dp"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
         android:text="Perfil"
-        android:textSize="10sp"
+        android:backgroundTint="@color/yolo_yellow"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
