--- a/app/src/main/res/layout/activity_resultado.xml
+++ b/app/src/main/res/layout/activity_resultado.xml
@@ -1,65 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--ketzalli
-muestra que se ha entregado una insignia-->
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="8dp">
+    android:background="@color/lighter_gray">
 
-    <LinearLayout
+    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/card"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#F2F1F1"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        app:cardBackgroundColor="@color/yolo_blue"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="13dp">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/titulo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginTop="40dp"
                 android:fontFamily="@font/bowlby_one"
                 android:text="¡FELICIDADES!"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textColor="#663399"
-                android:textSize="35dp" />
+                android:textColor="@color/lighter_gray"
+                android:textSize="34dp" />
 
             <ImageView
+                android:id="@+id/img"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:layout_marginBottom="10dp"
-                android:scaleType="centerInside"
+                android:layout_marginTop="25dp"
+                android:scaleType="fitCenter"
+                android:layout_below="@id/titulo"
                 app:srcCompat="@drawable/sexual_education" />
 
             <TextView
                 android:id="@+id/pregunta"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_below="@id/img"
+                android:layout_marginTop="20dp"
                 android:text="Has desbloqueado la insignia de Educacion Sexual.\n Sigue jugando para desbloquear más insignias."
                 android:textAlignment="center"
                 android:textAppearance="?attr/textAppearanceBody2"
-                android:textColor="?android:attr/textColorSecondary"
-                android:textSize="20dp" />
+                android:textColor="@color/lighter_gray"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:textStyle="bold"
+                android:textSize="17dp" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/continuar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_width="300dp"
+                android:layout_below="@id/pregunta"
+                android:layout_height="50dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginBottom="40dp"
+                android:layout_centerHorizontal="true"
+                app:cornerRadius="8dp"
+                android:backgroundTint="@color/yolo_purple"
                 android:text="continuar" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-</com.google.android.material.card.MaterialCardView>
+        </RelativeLayout>
+    </com.google.android.material.card.MaterialCardView>
+</RelativeLayout>
