--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -1,17 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--ketzalli
+<?xml version="1.0" encoding="utf-8"?><!--ketzalli
 contiene el contenido individual de cada recyclerview-->
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <com.google.android.material.card.MaterialCardView
+        android:layout_marginBottom="25dp"
         android:id="@+id/materialCardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="12dp"
+        android:layout_margin="15dp"
         app:cardCornerRadius="16dp"
         app:cardElevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -52,8 +52,8 @@ contiene el contenido individual de cada recyclerview-->
                 android:layout_marginLeft="29dp"
                 android:layout_marginEnd="13dp"
                 android:layout_marginRight="29dp"
-                android:scaleType="centerInside"
                 android:layout_marginBottom="13dp"
+                android:scaleType="centerInside"
                 android:src="@drawable/imgprueba" />
 
             <Button
@@ -94,4 +94,4 @@ contiene el contenido individual de cada recyclerview-->
         </RelativeLayout>
     </com.google.android.material.card.MaterialCardView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
